# pytest-notebook

./: .flake8  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  doc8.ini  pyproject.toml  pytest.ini  pytest_notebook.py  setup.py  test_nbdiff.ipynb  tox.ini
.github/workflows/: tests.yml
docs/: Makefile  changelog.rst  conf.py  environment.yaml  index.rst
docs/source/: api_index.rst  changelog.md  changelog.rst  conf.py  index.rst
docs/source/apidoc/: pytest_notebook.rst
docs/source/literal_includes/: nb_metadata_schema.rst
docs/source/user_guide/: get_started.md  get_started.rst  tutorial_config.ipynb  tutorial_config.md  tutorial_coverage.ipynb  tutorial_coverage.md  tutorial_intro.ipynb  tutorial_intro.md
docs/source/user_guide/images/: Presentation1.pptx
examples/: fail.ipynb  success.ipynb
pytest_notebook/: __init__.py  ansi_to_html.py  diffing.py  execution.py  ipy_magic.py  nb.v4.schema.json  nb_regression.py  notebook.py  plugin.py  post_processors.py  utils.py
pytest_notebook/example_nbs/: coverage.ipynb  example1.ipynb  example1_pass.ipynb  example2.ipynb
pytest_notebook/resources/: nb_metadata.schema.json
tests/: test_blacken_code.py  test_cell_diff.py  test_coalesce_streams.py  test_execution.py  test_filter_diff.py  test_ipy_magic.py  test_nb_diff.py  test_nb_regression.py  test_notebook.py  test_plugin.py  test_plugin_collector.py  test_plugin_fixture.py  test_utils.py
tests/raw_files/: different_outputs.ipynb  different_outputs_alt_diff.json  different_outputs_altered.ipynb  different_outputs_diff.json  different_outputs_with_metadata.ipynb  images-rearranged.ipynb  images.ipynb  nb_with_skip_meta.ipynb  poorly_formatted_code.ipynb  simple-diff-output.ipynb
tests/raw_files/coverage_test/: call_package.ipynb  package.py
tests/test_filter_diff/: test_filter_diff_outtypes.yml
tests/test_nb_diff/: test_diff_to_string.txt  test_notebooks_unequal.yml
tests/test_postprocessors/: test_beautifulsoup.py  test_blacken_code.py  test_plugins.py
tests/test_postprocessors/test_beautifulsoup/: test_beautifulsoup.yml
tests/test_postprocessors/test_blacken_code/: test_blacken_code.yml
tests/test_postprocessors/test_plugins/: test_documentation.txt
tests/test_utils/: test_autodoc.txt
